fix: it does not connect